# ai-rs

./: .env.example  AI_SDK_PLAN.md  Cargo.toml  README.md
crates/agent/: Cargo.toml
crates/agent/src/: agent.rs
crates/anthropic/: Cargo.toml
crates/anthropic/src/: provider.rs
crates/anthropic/tests/: integration_tests.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs  provider.rs  tools.rs  types.rs
examples/: Cargo.toml  agents.rs  mixed_tools.rs  provider_usage.rs
examples/agents/: basic_agents.rs  client_tools.rs  main.rs  tool_calling.rs
src/: agent.rs  anthropic.rs  errors.rs  lib.rs  main.rs  provider.rs  tools.rs  types.rs
