[package]
name = "ai-anthropic"
version = "0.1.0"
edition = "2024"

[dependencies]
ai-core = { path = "../core" }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
eventsource-stream = "0.2"

[dev-dependencies]
dotenv = "0.15"
tokio-test = "0.4"