[package]
name = "ai-core"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
tokio-stream = { version = "0.1", features = ["io-util"] }
futures-util = "0.3"
schemars = { version = "0.8", features = ["derive"] }
paste = "1.0"